tests/sumo/tls/wauts/errors/cross3ltl_error_unknown_to_prog/options.sumo
--no-duration-log --no-step-log --net-file=net.net.xml --routes=input_routes.rou.xml -b 0 -e 400 -a input_additional.add.xml
